# indexed_zstd

./: .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  PKGBUILD  README.md  TESTING.md  package.sh  pyproject.toml  setup.py
.github/actions/: publish.yml
.github/workflows/: aur.yml  publish.yml  test.yml
indexed_zstd/: ZSTDReader.hpp  indexed_zstd.cpp  indexed_zstd.pyx
libzstd/: _get_zstd.py
manylinux/: build-wheels.sh
test/: test.py  test.zst
tests/: conftest.py  test_api.py  test_error_paths.py  test_heavy.py  test_reference.py  test_roundtrip.py
